--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 <h1>Hello</h1>
 <button style="color:red;padding:20px" id="btn">Add</button>
+<h2>Test</h2>
 <span id="count"></span>
 
 <script src="./js/script.js" ></script>
